# e87canbus

./: .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml  steering-profiles.sqlite3
.github/workflows/: ci.yml
arduino/neotrellis_node/: platformio.ini
can/: bmw_e87.dbc.placeholder  custom_ids.md
coordinator/: README.md
coordinator/tests/: registry_test_support.py  test_application_controller.py  test_application_intent_execution.py  test_application_settings_domain.py  test_architecture.py  test_bench_pingpong.py  test_button_mapping.py  test_button_pad_effects_cpp.py  test_button_pad_firmware_host.py  test_button_pad_firmware_source.py  test_button_pad_program_vectors.py  test_can_protocol.py  test_cli_main.py  test_command_api.py  test_command_gateway.py  test_config.py  test_controller_service.py  test_deployment_profiles.py  test_device_registry.py  test_events.py  test_firmware_protocol_sync.py  test_generated_protocol.py  test_isotp_transport.py  test_live.py  test_live_contract.py  test_live_publication.py  test_openapi_contract.py  test_operator_intents.py  test_output.py  test_profile_api.py  test_reliability.py  test_rgb_snapshot.py  test_runtime.py  test_runtime_activation.py  test_servotronic_firmware_host.py  test_servotronic_protocol.py  test_settings_api.py  test_simulation_bench.py  test_simulation_bus.py  test_simulation_controller.py  (+12 more)
deploy/: README.md
deploy/kiosk/: e87canbus-kiosk.desktop  start-kiosk.sh
deploy/systemd/: controller.env.example  e87canbus-can0.service  e87canbus-controller.service  e87canbus-kiosk.service  e87canbus.service
devices/: README.md
devices/button-pad/: README.md  platformio.ini
devices/servotronic-controller/: README.md  platformio.ini
devices/steering-controller/: README.md
docs/: bench.md  coordinator_bootstrap.md  decoded_messages.md  deployment.md  device-registry-and-handshake.html  device-registry-and-handshake.md  pi_bootstrap.md  reliability.md  setup.md  simulation.md  wiring.md
docs/assist-curve/: 01-profile-domain-model.md  02-sqlite-persistence.md  03-runtime-activation.md  04-profile-api.md  05-interactive-editor.md  06-smooth-interpolation.md  README.md  implementation-log.md  monotone-cubic-v1-vectors.json  monotone-cubic-v1.md  phase-agent-prompt.md
docs/car-frontend/: 01-routing-and-layouts.md  02-application-settings.md  03-engine-telemetry-simulation.md  04-device-health.md  05-car-ui-foundation.md  06-car-screens.md  07-verification-and-acceptance.md  README.md  implementation-log.md  stage-agent-prompt.md
docs/decisions/: 0001-single-owner-event-kernel.md  0002-capability-controlled-output.md  0003-production-path-simulation.md  0004-generated-custom-protocol.md  0005-atomic-button-led-snapshots.md  0006-evidence-gated-hardware-behavior.md  0007-servotronic-controller-owns-assistance-mapping.md  0007-steering-controller-owns-assistance-mapping.md  0008-unified-controller-architecture.md  README.md
docs/device-registry-handshake/: README.md  implementation-log.md  phase-1-specification-and-protocol.md  phase-2-kernel-registry-and-gating.md  phase-3-live-contract-and-car-ui.md  phase-4-simulation-and-dev-ui.md  phase-5-button-pad-firmware.md  phase-agent-prompt.md
docs/hardening-01/: IMPLEMENTATION_LOG.md  PROMPT.md  README.md  phase-1-dead-code-and-boundaries.md  phase-2-button-dispatch.md  phase-3-time-axis.md  phase-4-tx-safety.md  phase-5-simulator-and-api-robustness.md  phase-6-live-runner.md
docs/hardening-02/: IMPLEMENTATION_LOG.md  PROMPT.md  README.md  phase-1-immediate-safety.md  phase-10-simulation-semantics-and-observability.md  phase-11-operational-hardening-and-closeout.md  phase-2-timestamped-ingress.md  phase-3-domain-state.md  phase-4-transitions-and-effects.md  phase-5-kernel-and-live.md  phase-6-simulator-and-api.md  phase-7-protocol-and-cleanup.md  phase-8-steering-failsafe.md  phase-9-correctness-and-safety-truth.md
docs/hardening-03/: IMPLEMENTATION_LOG.md  PROMPT.md  README.md  phase-1-atomic-snapshot.md  phase-2-policy-and-cleanup.md  phase-3-verified-rendering.md
docs/ideas/: simulated-car-ui.md
docs/isotp-rgb-button-pad/: README.md  (+4 more)
frontend/: AGENTS.md  README.md  components.json  eslint.config.js  index.html  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
protocol/: README.md  custom.toml  custom_ids.md  live-events-v1.schema.json  openapi.json
scripts/: arduino_upload.sh  bench_can_down.sh  bench_can_up.sh  button_pad_upload.sh  capture_can.sh  coordinator_bootstrap.sh  coordinator_deploy.sh  coordinator_logs.sh  generate_custom_protocol.py  generate_live_contract.py  generate_openapi.py  pi_deploy.sh  setup_pi.sh  test_button_pad_effects_cpp.py  vcan_down.sh  vcan_up.sh  watch_frontend_contracts.py
web/: index.html  package.json  pnpm-lock.yaml
(+455 files in other folders)
