[project]
name = "e87canbus"
version = "0.1.0"
description = "Hardware-aware but locally testable tooling for a BMW E87 CAN bus project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cantools>=40.0",
    "fastapi>=0.115",
    "python-can>=4.4",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
e87canbus = "e87canbus.main:main"
e87canbus-bench-pingpong = "e87canbus.bench_pingpong:main"
e87canbus-sim-bench = "e87canbus.sim_bench:main"
e87canbus-sim-api = "e87canbus.sim_api:main"
e87canbus-sim-neotrellis-socketcan = "e87canbus.sim_socketcan_node:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pi/e87canbus"]

[tool.pytest.ini_options]
testpaths = ["pi/tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["pi/e87canbus"]
