[project]
name = "e87canbus"
version = "0.1.0"
description = "Hardware-aware but locally testable tooling for a BMW E87 CAN bus project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "can-isotp==2.0.7",
    "cantools>=40.0",
    "fastapi>=0.115",
    "python-can>=4.4",
    "python-socketio>=5.13",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
e87canbus = "e87canbus.cli.main:main"

[dependency-groups]
dev = [
    "import-linter>=2.0",
    "mypy>=1.10",
    "httpx2>=2.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "watchfiles==1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coordinator/src/e87canbus"]

[tool.pytest.ini_options]
testpaths = ["coordinator/tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["coordinator/src/e87canbus"]

# Layer boundaries, enforced in CI with `uv run lint-imports`. The intended
# dependency direction points inward: adapters/runners -> service -> kernel ->
# application (the pure domain). See docs/decisions/0008 for the rationale.
[tool.importlinter]
root_package = "e87canbus"

[[tool.importlinter.contracts]]
name = "The controller flow is layered"
type = "layers"
layers = [
    "e87canbus.api",
    "e87canbus.service",
    "e87canbus.kernel",
    "e87canbus.domain",
]

[[tool.importlinter.contracts]]
name = "The domain layer imports inward only"
type = "forbidden"
source_modules = [
    "e87canbus.domain",
]
forbidden_modules = [
    "e87canbus.kernel",
    "e87canbus.service",
    "e87canbus.api",
    "e87canbus.cli",
    "e87canbus.live",
    "e87canbus.composition",
    "e87canbus.deployment",
    "e87canbus.simulation",
    "e87canbus.adapters",
    "e87canbus.protocol",
    "e87canbus.transport",
]
# The button-pad program model, the device catalogue and config legitimately use
# foundational wire types; every other path from the domain into protocol/infra
# stays forbidden.
ignore_imports = [
    "e87canbus.domain.button_pad -> e87canbus.protocol.can",
    "e87canbus.domain.device -> e87canbus.protocol.generated",
    "e87canbus.domain.device_registry -> e87canbus.protocol.can",
    "e87canbus.config -> e87canbus.protocol.generated",
]
